fix overflow error in sidebar

--- a/turretcss/assets/css/app.css
+++ b/turretcss/assets/css/app.css
@@ -70,11 +70,7 @@ html, body {
 .nav-miniwp-sidebar {
     padding: 0;
     margin: 0;
-    display: flex;
-    justify-content: space-between;
     height: 80px;
-    align-items: center;
-    color: white;
     width: 100%;
 }
 
